force-app/main/default/objects/Task_Item__c/Task_Item__c.object-meta.xml
<CustomObject>
    <description>This field tells the name of the task.</description>
    <label>Task Item</label>
    <nameField>
        <displayFormat>TASK-{0000}</displayFormat>
        <label>Task Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>