force-app/main/default/objects/Task_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will tell who owns the task.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskOwned</relationshipName>
    <type>Lookup</type>
</CustomField>