force-app/main/default/objects/Task_Item__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>This field tells the date when the task should be completed.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>