force-app/main/default/objects/Task_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This field tells the due date of the task.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>