force-app/main/default/objects/Task_Item__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field tells who created or raised the task.</description>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TasksRaised</relationshipName>
    <type>Lookup</type>
</CustomField>