force-app/main/default/objects/Task_Item__c/validationRules/Due_Date_Not_In_Past_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_In_Past_On_Create</fullName>
    <active>true</active>
    <description>Prevents setting a due date in the past when creating a new task.</description>
    <errorConditionFormula>AND(
     ISNEW(),
     Due_Date__c &lt; TODAY()
   )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due date cannot be in the past for a new task.</errorMessage>
</ValidationRule>