force-app/main/default/objects/Task_Item__c/listViews/My_Board.listView-meta.xml
<ListView>
    <fullName>My_Board</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>My Board</label>
</ListView>